# CustomOS

./: .gitignore  CMakeLists.txt  Makefile  bochsout.txt  bochsrc.txt  cleardrive.bash  compileprograms.bash  grub.cfg  knownissues.txt  linker.ld  makefile  readme.md  run.bash  test.txt
boot/i386/: boot0.S  boot1.S  boot2.S
include/: cleanup.h  inttypes.h  itoa.h  list.h  stdbool.h  stddef.h  string.h
include/kernel/: arch.h  commands.h  compiler.h  multiboot.h  panic.h  source.h  task.h  terminal.h  types.h
include/kernel/descriptors/: bda.h  gdt.h  idt.h  madt.h  rsd.h
include/kernel/devices/: device.h  device_manager.h
include/kernel/drivers/: ata.h  ide.h  keyboard.h  pci.h  port_io.h  vbe.h  vga.h
include/kernel/filesystem/: fat16.h  file.h  fs.h  path.h  sockfs.h  vfs.h
include/kernel/interrupts/: idt.h  isr.h
include/kernel/memory/: gdt.h  kmalloc.h  layout.h  mm.h  page.h  page_memory_alloc.h  pagetable.h  physical_memory.h  vm.h  vmspace.h
include/kernel/process/: ap_start.h  cpu.h  elf.h  fd.h  ioapic.h  lapic.h  process.h  spinlock.h
include/kernel/socket/: socket.h
include/kernel/syscalls/: syscalls.h
include/kernel/time/: pit.h
include/kernel/wm/: display.h  window.h
include/types/: bitmap.h  bool.h  common.h  list.h  string.h
iso/boot/: kernel  kernel.elf
mk/: arch-i386.mk  boot.mk  disk.mk  flags.mk  headers.mk  kernel.mk  rules.mk  toolchain.mk  userland.mk
src/: boot.asm  boot.s  itoa.c  list.c  string.c
src/kernel/: arch.c  commands.c  kernel.c  multiboot.c  panic.c  source.c  switch_to.asm  task.c  terminal.c
src/kernel/descriptors/: bda.c  gdt.c  idt.c  madt.c  rsd.c
src/kernel/devices/: device_manager.c
src/kernel/drivers/: ata.c  ide.c  keyboard.c  pci.c  port_io.c  vbe.c  vga.c
src/kernel/filesystem/: fat16.c  fs.c  path.c  sockfs.c  vfs.c
src/kernel/interrupts/: idt.c  isr.c  isr_wrappers.asm
src/kernel/memory/: gdt.c  kmalloc.c  lgdt.asm  mm.c  page.c  page_memory_alloc.c  pagetable.c  physical_manager.c  vm.c  vmspace.c
src/kernel/process/: ap_start.c  cpu.c  elf.c  fd.c  ioapic.c  lapic.c  process.c  spinlock.c  switch_to.asm  trampoline.asm  trampoline.nasm
src/kernel/syscalls/: syscalls.c
src/kernel/time/: pit.c
src/kernel/wm/: window.c
src/types/: bitmap.c  list.c  string.c
sys/boot/: boot.s
sys/dev/acpi/: acpi.h
sys/dev/ata/: ata.c  ata.h
sys/dev/ide/: ide.c  ide.h
sys/dev/input/: keyboard.c  keyboard.h
sys/dev/pci/: pci.c  pci.h
sys/dev/port/: port_io.c  port_io.h
sys/dev/video/: vbe.c  vbe.h  vga.c  vga.h
sys/dev/virtio/: virtio_gpu.c  virtio_gpu.h  virtio_pci.c  virtio_pci.h  vqueue.h
sys/disk/: mbr.c  mbr.h
sys/fs/: fat16.c  fat16.h  file.h  path.c  path.h  sockfs.c  sockfs.h  vfs.c  vfs.h
sys/i386/bios/: bda.c  bda.h
sys/i386/i386/: apic.c  context.c  context.h  gdt.c  gdt.h  idt.c  idt.h  initcpu.c  initcpu.h  interrupts.h  locore.S  machdep.c  machdep.h  madt.c  madt.h  pcpu.c  pmap_i386.c  rsd.c  rsd.h  support.S  syscall.h  tss.c  tss.h
sys/i386/include/: asmmacros.h  bootinfo.h  context.h  gdt.h  genassym.c  genassym.h  idt.h  pcpu.h  rsd.h  segment_i386.h  trapframe.h  tss.h
sys/kern/: commands.c  compiler.h  device.h  elf.c  elf.h  errno.c  errno.h  exec.c  exec.h  fd.c  fd.h  init_enter.S  isr.c  isr.h  isr_wrappers.S  kern.c  kern.h  lapic.c  lapic.h  panic.c  panic.h  pcpu.c  pcpu.h  pit.c  pit.h  process.c  process.h  socket.h  spinlock.c  spinlock.h  syscalls.c  syscalls.h  system_init.c  system_init.h  terminal.c  terminal.h  trampoline.asm
sys/libkern/: bitmap.c  bitmap.h  cleanup.h  common.h  list.c  list.h  string.c  string.h
sys/sys/: assym.h  bus.h  device.c  device.h  pcpu.c  pcpu.h
sys/vm/: kmalloc.c  kmalloc.h  layout.h  lgdt.asm  types.h  vm.h  vm_fault.c  vm_fault.h  vm_map.c  vm_map.h  vm_object.c  vm_object.h  vm_page.c  vm_page.h  vm_pager.h  vm_phys.c  vm_phys.h  vm_region.c  vm_region.h  vm_space.c  vm_space.h
sys/wm/: display.h  window.c  window.h
sys/x86/include/: page_table.h  pmap.h  segment.h
sys/x86/x86/: acpi.h  features.h  gdt.h  io.h  ioapic.c  ioapic.h  lapic.h  msr.h  pmap.c  tss.h
user/include/: graphics.h  socket.h  stdio.h  string.h  syscalls.h
user/lib/: graphics.c  stdio.c  string.c
user/programs/: gfx_test.c  hello.asm  init.asm  multi_window.c  socket.asm  socket2.c  socktest.asm  terminal.c  win1.c  win2.c
